--- a/style.css
+++ b/style.css
@@ -25,47 +25,45 @@ h1 {
     text-indent: 1rem;
     margin: 0;
 }
-
 h2 {
     font-size: 2.5rem;
     margin: 0;
 }
-
 header {
-    background-color: black;
+    background-color: rgb(51, 41, 179);
     text-align: left;
     padding: 0.25rem;
+    max-width: auto;
 }
-
 header a {
     color: #ffffff;
     text-decoration: none;
     padding: 1.5rem;
     font-weight: 600;
 }
-
 footer {
-    background-color: black;
+    background-color: rgb(51, 41, 179);
     text-align: left;
     padding: 0.5rem;
     color: #ffffff;
     font-size: 0.7rem;
+    max-width: auto;
 }
 .main-container{
     text-align: center;
     color: #ffffff;
     position: relative;
-    max-width: 100%;
+    max-width: auto;
 }
 .main-container img{
-    max-width: auto;
+  max-width: auto;
 }
 .main-text{
     position: absolute;
     top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
-    text-shadow: 4px 1px gray;
+    text-shadow: 4px 1px rgb(51, 41, 179);
 }
 .main-text p{
     margin: 0;
@@ -75,7 +73,6 @@ footer {
     margin: 1rem;
     padding-bottom: 0.5rem;
 }
-/* Slideshow container */
 .carousel-container {
   max-width: auto;
   position: relative;
@@ -98,16 +95,13 @@ footer {
 }
 .mySlides-text-right{
     position: absolute;
-    top: 25%;
+    top: 10%;
     left: 50%;
 }
-/* Hide the images by default */
 .mySlides {
   display: block;
   position: relative;
 }
-
-/* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
   position: absolute;
@@ -115,26 +109,20 @@ footer {
   width: auto;
   margin-top: -22px;
   padding: 16px;
-  color: black;
+  color: rgb(51, 41, 179);
   font-weight: bold;
-  font-size: 18px;
+  font-size: 32px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
 }
-
-/* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
-
-/* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(121, 123, 225, 0.8);
 }
-
-/* Caption text */
 .text {
   color: black;
   font-size: 15px;
@@ -145,38 +133,34 @@ footer {
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
+/* Number text (1/5) */
 .numbertext {
-  color: black;
-  font-size: 12px;
+  color: yellow;
+  font-size: 20px;
   padding: 8px 12px;
   position: absolute;
   top: 0;
 }
-
-/* The dots/bullets/indicators */
+/* The dots/bullets */
 .dot {
   cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
+  height: 20px;
+  width: 25px;
+  margin: 0 4px;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
 }
-
 .active, .dot:hover {
-  background-color: #717171;
+  background-color: rgba(121, 123, 225, 0.8);
 }
-
-/* Fading animation */
+/* Fading animation; W3 Schools tutorial */
 .fade {
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: 2.0s;
 }
-
 @keyframes fade {
-  from {opacity: .4}
+  from {opacity: .5}
   to {opacity: 1}
 }
